--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -8,7 +8,16 @@
     items-center
     p-2
     text-gray-500
-    font-bold rounded-lg dark:text-white  hover:duration-500  hover:delay-300 hover:bg-purple-300 hover:text-white dark:hover:bg-gray-700
+    font-bold
+    rounded-lg
+    dark:text-white
+    hover:duration-500
+    hover:delay-300
+    hover:bg-purple-600
+    hover:text-white
+    dark:hover:bg-gray-700
+    hover:animate-bounce
+
     font-rubik
 }
 .cardHover{
@@ -25,6 +34,9 @@
 }
 .input{
     @apply bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500
+}
+.errorInput{
+    @apply bg-red-800 border-2 border-red-700 text-red-900 text-sm rounded-lg focus:ring-blue-500 focus:border-red-500 block w-full p-2.5 dark:bg-gray-700 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500
 }
 .formTitle{
     @apply mb-2 font-extrabold text-slate-800  dark:text-gray-300 text-3xl relative font-rubik
@@ -122,6 +134,37 @@
 }
 .deleteButton{
     @apply  bg-rose-600 p-2 rounded-full text-white font-bold right-2 hover:animate-bounce dark:bg-blue-500
+}
+
+.titleText{
+    @apply
+    font-bold
+    text-2xl
+    text-gray-800
+    leading-tight
+    dark:text-white
+}
+.textArea{
+    @apply
+    bg-gray-50
+    border
+    border-gray-300
+    text-gray-900
+    text-sm
+    rounded-lg
+    focus:ring-blue-500
+    focus:border-blue-500
+    block
+    w-full
+    h-24
+    py-0
+        px-0
+    dark:bg-gray-700
+    dark:border-gray-600
+    dark:placeholder-gray-400
+    dark:text-white
+    dark:focus:ring-blue-500
+    dark:focus:border-blue-500
 }
 
 
