--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -36,7 +36,19 @@
     @apply bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500
 }
 .errorInput{
-    @apply bg-red-800 border-2 border-red-700 text-red-900 text-sm rounded-lg focus:ring-blue-500 focus:border-red-500 block w-full p-2.5 dark:bg-gray-700 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500
+    @apply
+    border-2
+    border-red-700
+    text-gray-900
+    text-sm
+    rounded-lg
+    focus:border-red-500
+    w-full
+    p-2.5
+    dark:bg-gray-700
+    dark:text-white
+    dark:focus:ring-blue-500
+    dark:focus:border-blue-500
 }
 .formTitle{
     @apply mb-2 font-extrabold text-slate-800  dark:text-gray-300 text-3xl relative font-rubik
