--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -191,4 +191,30 @@ dark:text-white
     dark:focus:border-blue-500
 }
 
+.inputDropDown{
+    @apply
+    bg-gray-50
+    text-gray-900
+    text-sm
+    rounded-lg
+    focus:ring-blue-500
+    focus:border-blue-500
+    block
+    w-full
+    p-2.5
+    dark:bg-gray-700
+    dark:border-gray-600
+    dark:placeholder-gray-400
+    dark:text-white
+    dark:focus:ring-blue-500
+    dark:focus:border-blue-500
 
+}
+.itemDropDown{
+    @apply
+    bg-gray-100
+    text-gray-900
+    dark:bg-gray-700
+    dark:border-gray-600
+    dark:text-white
+}
